# joern-pdg-generator

./: .env.example  .gitignore  .joern-version  README.md  json_to_dot.py  pyproject.toml  requirements.txt  ruff.toml
docs/: CFG.md  DFG.md  Joern.md  Joern_CDFG.md  LLVM.md  README.md  _sidebar.md  edit.md  index.html
examples/: arguments.cpp  condition.cpp  data_flow.cpp  overload.cpp  pointer.cpp  reference.cpp  return.cpp  switch.cpp  test.cpp  test.java  test.py  test2.py  testbench.py
log/: failed_files.txt
scripts/: CodeNet.sh  codenet.py  codenet_cpg.py  cpg.sh  delete_dir.sh  failed_files.txt  joern-all.sh  joern.sh  remove_codenet.sh
scripts/openai/: main.py  prompt_generator.py  requirements.txt
src/: cpg.py  diff.py  filter.py  json2dot.py  merge.py  predicates.py  utils.py  v2.py  visualization.py
src/langs/: cpp.py  python.py
src/pruner/: __init__.py
src/pruner/langs/: __init__.py  python.py
src/pruner/predicates/: __init__.py  edges.py  nodes.py
